# hermes-deck

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  hermes-deck.sln
.github/: release.yml
.github/workflows/: .gitkeep
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docker/: agent-service.Dockerfile  api.Dockerfile  web.Dockerfile
docs/release/: .gitkeep  aspire-docker-deployment.md  release-notes-template.md  testing.md
proto/: agent-service.proto
scripts/deploy/: .gitkeep
scripts/release/: .gitkeep  release-action.schema.json  release-event.schema.json  release-record.schema.json
specs/001-hermes-control-deck/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ci-cd-release-cycle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/HermesDeck.Api/: HermesDeck.Api.csproj  Program.cs
src/agent-service/: pyproject.toml  requirements.txt
src/agent-service/app/: __init__.py  main.py
src/agent-service/app/grpc/: chat_stream.py  run_status.py  server.py
src/agent-service/app/hermes_agent/: __init__.py  run_state.py
src/agent-service/scripts/: generate_proto.py
src/agent-service/tests/: test_chat_stream_contract.py  test_grpc_server.py  test_main.py  test_run_state.py  test_smoke.py
(+102 files in other folders)
