[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hermes-agent-service"
version = "0.1.0"
description = "Hermes Agent Service — FastAPI + gRPC backend for Hermes Deck"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "mcp>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
